fix scrollbar

--- a/client/assets/scss/_course.scss
+++ b/client/assets/scss/_course.scss
@@ -15,7 +15,7 @@
 
   #session-card {
     max-height: 80vh;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .collection-item {
